# ML

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  package.json  pnpm-lock.yaml  requirements.in  requirements_lock.txt
canbiocin/cacerts/: Dockerfile  README
canbiocin/client/: App.jsx  BUILD.bazel  CanBiocinLogo.avif  DataGridEditToolbar.jsx  DataGridFunctions.js  DataGridUtils.jsx  Dialog.jsx  Dropdowns.jsx  EditRow.jsx  Field.jsx  FormItem.jsx  Formulation.jsx  Formulations.jsx  Grid.jsx  GrpcContext.jsx  Ingredient.jsx  Ingredients.jsx  Loading.jsx  Login.jsx  Logout.jsx  Packaging.jsx  PackagingItem.jsx  Profile.jsx  Recipe.jsx  RecipeMix.jsx  RecipeMix.test.jsx  Recipes.jsx  Tabs.jsx  auth.js  grpc.js  hash_utils.js  index.js  logger.js  mockAuth0.js  money.js  scopes.js  timestamp.js  utils.js  webpack.config.js
canbiocin/client/public/: CanBiocinLogo.avif  index.html
canbiocin/db/: BUILD.bazel  base_collection.go  blending.go  client.go  containers.go  firestore_client.go  firestore_docs.go  mock_client.go  packaging.go  postbiotics.go  prebiotics.go  probiotics.go  recipes.go  saved_recipes.go  shipping.go  suppliers.go
canbiocin/envoy/: BUILD.bazel  envoy.yaml
canbiocin/healthcheck/: BUILD.bazel  main.go
canbiocin/parseXLS/: BUILD.bazel  Bulk Product Workbook.xlsx  GMP - Probiotic Supplement for Cats and Dogs.xlsx  Jarred Powder Workbook.xlsx  Soft Chew Workbook.xlsx  init.go  packaging.go  postbiotics.go  prebiotics.go  probiotics.go  process_file.go  recipe.go
canbiocin/parseXLS/test/: BUILD.bazel  main.go
canbiocin/proto/: BUILD.bazel  container.pb.go  container.proto  container_connect.d.ts  container_pb.d.ts  money.pb.go  money.proto  money_connect.d.ts  money_pb.d.ts  other.pb.go  other.proto  other_connect.d.ts  other_pb.d.ts  postbiotics.pb.go  postbiotics.proto  postbiotics_connect.d.ts  postbiotics_pb.d.ts  prebiotics.pb.go  prebiotics.proto  prebiotics_connect.d.ts  prebiotics_pb.d.ts  probiotics.pb.go  probiotics.proto  probiotics_connect.d.ts  probiotics_pb.d.ts  recipe.pb.go  recipe.proto  recipe_connect.d.ts  recipe_pb.d.ts  service.pb.go  service.proto  service_connect.d.ts  service_grpc.pb.go  service_pb.d.ts  supplier.pb.go  supplier.proto  supplier_connect.d.ts  supplier_pb.d.ts
canbiocin/recipe/: BUILD.bazel  recipe.go
canbiocin/secrets/: BUILD.bazel  secrets.go
canbiocin/server/: BUILD.bazel  compose.yaml  main.go  push.sh  run.sh  scopes.go  server.go
canbiocin/terraform/: MIG_README.md  README.md  README_Auth0.md  artifact-registry.tf  auth0.tf  backend.tf  firestore.tf  main.tf  mig.tf  monitoring.tf  networking.tf  outputs.tf  provider.tf  service-account.tf  setupenv.sh  startup-script.sh  static-site.tf  terraform.tf  terraform.tfvars  users.tf  variables.tf
canbiocin/test/: BUILD.bazel  main.go
canbiocin/utils/: BUILD.bazel  date.go  env.go  money.go
chat/: README.md
chat/backend/: BUILD.bazel  main.go  server.go
chat/backend/test/: BUILD.bazel  main.go  server.go
chat/client/: BUILD.bazel  client.js  index.html
chat/envoy/: BUILD.bazel  envoy.yaml
chat/proto/: BUILD.bazel  chat.pb.go  chat.proto
ml_python/: BUILD.bazel  requirements.in  requirements_lock.txt
ml_python/ai/: BUILD.bazel  requirements.in  requirements.txt
ml_python/ai/langchain/: BUILD.bazel  requirements.in  requirements.txt
ml_python/ai/langchain/llm/: BUILD.bazel  requirements.in
ml_python/ai/langchain/llm/openai/: BUILD.bazel  requirements.in  requirements.txt
ml_python/ai/langchain/messages/: BUILD.bazel  requirements.in  requirements.txt
ml_python/ai/langchain/translation/: BUILD.bazel  requirements.txt  translate.py
ml_python/ai/llm/: BUILD.bazel  llm.py  requirements.txt  uri.py
ml_python/ai/llm/openai/: BUILD.bazel  openai.py  requirements.in  requirements.txt
ml_python/ai/messages/: human.py  system.py
ml_python/ai/translation/: requirements.in  requirements.txt
ml_python/slack/: .env.test  BUILD.bazel  commands.py  events.py  requirements.in  requirements.txt  utils.py
ml_python/slack/agent/: BUILD.bazel  agent.py.bak  main.py  requirements.in  requirements.txt
ml_python/utils/: .__atomic-write8b822f54  .__atomic-writea22f0055  BUILD.bazel
ml_python/utils/secrets/: BUILD.bazel  requirements.in  requirements.txt  secrets.py
rules/: BUILD.bazel  build_test.sh  cloud_function_deploy.bzl  copy_into_workspace.sh  defaults.bzl  deploy_cf.sh  diff_with_workspace.sh  ecr_oci.bzl  gofmt.bzl  package_cf.sh  snapshot.bzl
slack/: api.py
slack/agent/: BUILD.bazel  README  events.py  main.py  requirements.in  requirements.txt
terraform/: .terraform.lock.hcl  access.sh  artifact-registry.tf  backend.tf  main.tf  provider.tf  variables.tf
utils/secrets/: requirements.txt
voiceAgent/: index.html
voiceAgent/client/: BUILD.bazel  audio.js  audio_playback.js  index.html  speech_detection.js
voiceAgent/proto/: BUILD.bazel  messages.pb.go  messages.proto  messages_pb.d.ts
voiceAgent/server/: BUILD.bazel  buy_car.flac  main.go
voiceAgent/server/detect/: .detect_intent.go.swp  BUILD.bazel  detect_intent.go  streamer.go
voiceAgent/server/functions/: BUILD.bazel  all_functions.go  getCar.go
voiceAgent/sessions/: BUILD.bazel  sessionMap.go  sessions.go
