# Load the gazelle rule
load("@bazel_gazelle//:def.bzl", "gazelle")

# The following comment defines the import path that corresponds to the repository root directory.
# This is a critical definition, and if you mess this up all of the `BUILD.bazel` file generation
# will have errors.

# Modify the prefix to your project name in your git repository.

# gazelle:prefix github.com/Chorus-Development/Chorus/tree/master
gazelle(name = "gazelle")

# Add a rule to call gazelle and pull in new go dependencies.
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

load("@npm_rules_js//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")


load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
        name = "requirements",
        src = "requirements.in",
        requirements_txt = "requirements_lock.txt",
        data = [ 
          "//utils/secrets:requirements",
          "//slack/agent:requirements" ],
)
