# Load the gazelle rule
load("@bazel_gazelle//:def.bzl", "gazelle")

# The following comment defines the import path that corresponds to the repository root directory.
# This is a critical definition, and if you mess this up all of the `BUILD.bazel` file generation
# will have errors.

# Modify the prefix to your project name in your git repository.

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# gazelle:prefix github.com/ML/tree/master
gazelle(name = "gazelle")

# Add a rule to call gazelle and pull in new go dependencies.
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

buildifier(
    name = "buildifier",
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    data = [
        "//ml_python/slack/agent:requirements",
        "//ml_python/utils/secrets:requirements",
    ],
    requirements_txt = "requirements_lock.txt",
)
