load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//rules:gofmt.bzl", "gofmt_test")

buildifier(
    name = "buildifier",
)

gofmt_test()

# gazelle:prefix github.com/ML/canbiocin/db
gazelle(name = "gazelle")

go_library(
    name = "db_lib",
    srcs = ["base_collection.go",
            "client.go",
            "firestore_docs.go",
            "firestore_client.go",
            "mock_client.go",
            "postbiotics.go",
            "prebiotics.go",
            "probiotics.go",
            "recipes.go",
            "suppliers.go",
    ],
    importpath = "github.com/ML/canbiocin/db",
    visibility = ["//visibility:public"],
    deps = [
        "//canbiocin/proto:canbiocin_go_grpc",
        "//canbiocin/utils:utils_lib",
        "@com_google_cloud_go_firestore//:firestore",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

