load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library", "go_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//rules:snapshot.bzl", "snapshot")

buildifier(
    name = "buildifier",
)

snapshot(dep = ":canbiocin_go_proto")

# gazelle:prefix github.com/ML/canbiocin/proto
gazelle(name = "gazelle")

# Combined proto library for all protos
proto_library(
    name = "canbiocin_proto",
    srcs = glob(["*.proto"]),
    deps = [
        "@protobuf//:timestamp_proto",
    ],
)

# Go proto libraries
go_proto_library(
    name = "canbiocin_go_proto",
    importpath = "github.com/ML/canbiocin/proto",
    visibility = ["//visibility:public"],
    protos = [":canbiocin_proto"],
)

go_grpc_library(
    name = "canbiocin_go_grpc",
    importpath = "github.com/ML/canbiocin/proto",
    visibility = ["//visibility:public"],
    protos = [":canbiocin_proto"],
)

ts_proto_library(
    name = "canbiocin_ts_proto",
    node_modules = "//:node_modules",
    proto = ":canbiocin_proto",
    proto_srcs = glob(["*.proto"]),
    protoc_gen_options = {"import_extension": "js"},
    visibility = ["//visibility:public"],
    gen_connect_es = True,
    deps = [
        "//:node_modules/google-protobuf",
        "//:node_modules/grpc-web",
        "//:node_modules/@connectrpc/protoc-gen-connect-es",
    ],
)
