load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//rules:gofmt.bzl", "gofmt_test")

buildifier(
    name = "buildifier",
)

gofmt_test()

# gazelle:prefix github.com/ML/canbiocin/secrets
gazelle(name = "gazelle")

go_library(
    name = "secrets_lib",
    srcs = ["secrets.go",
    ],
    importpath = "github.com/ML/canbiocin/secrets",
    visibility = ["//visibility:public"],
    deps = [
      "//canbiocin/utils:utils_lib",
      "@org_golang_google_api//option:go_default_library",
      "@com_google_cloud_go_secretmanager//apiv1:go_default_library",
      "@com_google_cloud_go_secretmanager//apiv1/secretmanagerpb:go_default_library",
    ],
)

