load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_push", "oci_image", "oci_image_index", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//rules:gofmt.bzl", "gofmt_test")

buildifier(
    name = "buildifier",
)

gofmt_test()

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
    goos = "linux",
    goarch = "arm64",
    #goarch = "amd64",
)

# gazelle:prefix github.com/ML/canbiocin/server
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "//canbiocin/proto:canbiocin_go_grpc",
        "//canbiocin/db:db_lib",
        "//canbiocin/parseXLS:parseXLS_lib", # Just to initialize ...TODO remove
        "//canbiocin/recipe:recipe_lib",
        "//canbiocin/utils:utils_lib",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//health:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

pkg_tar(
    name = "app-tar",
    srcs = [
      ":server",
    ],
    package_dir = "/",
    deps = [
      "//canbiocin/parseXLS:initfiles_tar"
    ]
)

oci_image(
    name = "canbiocin_server_image",
    base = "@ca-certs",
    cmd = [],
    entrypoint = ["/server"],
    env = {},
    exposed_ports = [
        "8082/tcp",
    ],
    tars = [":app-tar"],
)

oci_push(
    name = "push",
    image = ":canbiocin_server_image",
    remote_tags = ["latest"],
    repository = "us-central1-docker.pkg.dev/canbiocin/canbiocin-dev/backend",
)

oci_tarball(
    name = "tar-docker",
    format = "docker",
    image = "canbiocin_server_image",
    repo_tags = ["localhost:4000/canbiocin_server"],
)

oci_image_index(
    name = "app-index",
    images = [
        ":canbiocin_server_image",
    ],
)

oci_tarball(
    name = "tar-oci-index",
    format = "oci",
    image = ":app-index",
    repo_tags = ["localhost:4000/canbiocin_server"],
)

go_library(
    name = "server_lib",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/ML/canbiocin/server",
    visibility = ["//visibility:private"],
    deps = [
        "//canbiocin/proto:canbiocin_go_grpc",
        "//canbiocin/db:db_lib",
        "//canbiocin/parseXLS:parseXLS_lib", # Just to initialize ...TODO remove
        "//canbiocin/recipe:recipe_lib",
        "//canbiocin/utils:utils_lib",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//status",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
)
