load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("//rules:gofmt.bzl", "gofmt_test")
load("//rules:snapshot.bzl", "snapshot")
load("@rules_proto_grpc//js:defs.bzl", "js_grpc_web_compile")
load("@aspect_rules_js//js:defs.bzl", "js_library")

buildifier(
    name = "buildifier",
)

gofmt_test()

snapshot(dep=":chat_go_proto")

# gazelle:prefix github.com/Chorus-Development/Chorus
gazelle(name = "gazelle")

proto_library(
    name = "chat_proto",
    srcs = ["chat.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

# This uses commonjs+dts format
js_grpc_web_compile(
    name = "chat_js_proto_pb",
    protos = [":chat_proto"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "chat_js_proto",
    srcs = [":chat_js_proto_pb"],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/google-protobuf",
        "//:node_modules/grpc-web",
    ],
)

go_proto_library(
    name = "chat_go_proto",
    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "github.com/Chorus-Development/Chorus/chat/proto",
    protos = [":chat_proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":chat_go_proto"],
    importpath = "github.com/Chorus-Development/Chorus/chat/proto",
    visibility = ["//visibility:public"],
)

