load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

buildifier(
    name = "buildifier",
)

gazelle(name = "gazelle")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    data = [
        "//ml_python/ai/langchain/messages:requirements",
        "//ml_python/ai/langchain/translation:requirements",
    ],
    requirements_txt = "requirements.txt",
    visibility = ["//visibility:public"],
)

py_library(
    name = "slack",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//ml_python/ai/langchain/messages",
        "//ml_python/ai/langchain/translation",
    ],
)
