load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_run_devserver")
load("@npm//:http-server/package_json.bzl", http_server_bin = "bin")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle")

http_server_bin.http_server_binary(
    name = "http_server",
)

webpack_bundle(
    name = "bundle",
    srcs = [
      "audio_playback.js",
      "speech_detection.js",
    ],
    entry_point = "audio.js",
    node_modules = "//:node_modules",
    supports_workers = False,
    deps = [
      "//:node_modules/hark",
      "//:node_modules/recordrtc",
      "//voiceAgent/proto:voice_agent_ts_proto",
    ],
)

js_library(
    name = "voice-agent-client",
    srcs = [
        "index.html",
    ],
    deps = [
        ":bundle",
    ],
)

js_run_devserver(
    name = "dev",
    args = ["-p 8081 -c-1"],  # disable cache
    chdir = package_name(),
    data = [
        ":voice-agent-client",
    ],
    log_level = "debug",
    tool = ":http_server",
)
