load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_devserver")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@npm//:http-server/package_json.bzl", http_server_bin = "bin")

buildifier(
    name = "buildifier",
)

# gazelle:prefix github.com/ML/voiceAgent/server/detect
gazelle(name = "gazelle")

http_server_bin.http_server_binary(
    name = "http_server",
)

webpack_bundle(
    name = "bundle",
    srcs = [
        "audio_playback.js",
        "elevenlabs.js",
        "logger.js",
        "speech_detection.js",
    ],
    entry_point = "audio.js",
    node_modules = "//:node_modules",
    supports_workers = False,
    deps = [
        "//:node_modules/@11labs/client",
        "//:node_modules/hark",
        "//:node_modules/recordrtc",
        "//voiceAgent/proto:voice_agent_ts_proto",
    ],
)

js_library(
    name = "voice-agent-client",
    srcs = [
        "index.html",
    ],
    deps = [
        ":bundle",
    ],
)

js_run_devserver(
    name = "dev",
    args = ["-p 8081 -c-1"],  # disable cache
    chdir = package_name(),
    data = [
        ":voice-agent-client",
    ],
    log_level = "debug",
    tool = ":http_server",
)
