load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//rules:gofmt.bzl", "gofmt_test")

buildifier(
    name = "buildifier",
)

gofmt_test()

# gazelle:prefix github.com/ML/voiceAgent/server
gazelle(name = "gazelle")

filegroup(
    name = "audio",
    srcs = [
        "buy_car.flac",
    ],
)

go_binary(
    name = "server",
    data = [
        "buy_car.flac",
    ],
    embed = [":server_lib"],
    importpath = "github.com/ML/voiceAgent/server",
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/ML/voiceAgent/server",
    visibility = ["//visibility:private"],
    deps = [
        "//voiceAgent/proto:go_default_library",
        "//voiceAgent/server/detect",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
        "@com_google_cloud_go_dialogflow//cx/apiv3beta1/cxpb",
        "@org_golang_google_protobuf//proto",
    ],
)
